# co-op-claude

./: .gitignore  CLAUDE.md  COOP_CLAUDE_BLUEPRINT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: AGENT_TEAMS_INTEGRATION.md  ARCHITECTURE.md  EXAMPLES.md  NETWORKING.md
scripts/: demo.sh  quick-start.sh  setup-agent-teams.sh
src/: __init__.py  bus.py  claude_bridge.py  cli.py  config.py  display.py  models.py  relay.py  roles.py  station.py  task_board.py
templates/: CLAUDE_MD_ADDENDUM.md  CLAUDE_MD_SQUABBLE.md
templates/roles/: architect.md  custom.md  devops.md  fullstack.md  ux.md
templates/tmux/: coop-dual.conf  coop-quad.conf
tests/: test_bus.py  test_models.py  test_relay.py  test_station.py  test_task_board.py
